Approval request feature for student has been done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,6 +117,8 @@
               <small class="green-right sm"><%= u.role_name %></small><br/>
               <span class="grey-sm">Branch</span>
               <small class="yellow-ok sm"><%= u.branch_name %></small><br/>
+              <%= link_to "Pending Approval", approval_path %>
+
               
             </p>
           </div>
