--- a/app/views/students/_basic.html.erb
+++ b/app/views/students/_basic.html.erb
@@ -10,10 +10,10 @@
   <div class="col-xs-4 row-top">
     <ul class="vlsdet pt-0">
         <h4 class="row-top bold-subhead">Personal</h4>
-        <% %w(first_name surname date_of_birth gender).each do |v| %>
-        <%= li1(v,v,'span','small',a)%>
+        <% %w(ref_no first_name surname date_of_birth gender).each do |v| %>
+        <%= li1_insecure(v,v,'span','small',a)%>
         <% end %>
-        <%= li2('nationality',[:country_id,:select,Country,
+        <%= li2_insecure('nationality',[:country_id,:select,Country,
                   :nationality],a,nil,"span","strong")%>
     </ul>
   </div>
@@ -21,7 +21,7 @@
     <ul class="vlsdet pt-0">
         <h4 class="row-top bold-subhead">Contact</h4>
         <% %w(mobile1 mobile2 email alternate_email home_phone work_phone).each do |v| %>
-        <%= li1(v,v,'span','small',a)%>
+        <%= li1_insecure(v,v,'span','small',a)%>
         <% end %>
     </ul>
   </div>
@@ -33,11 +33,12 @@
         <h4 class="bold-subhead">Address</h4>
         <% [['address_line1','line1'],
             ['address_line2','line2'],
-            ['address_city','city'],
-            ['address_country','country'],
-            ['address_post_code','post_code']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',a)%>
+            ['address_city','city']].each do |v| %>
+          <%= li1_insecure(v[1],v[0],'span','small',a)%>
         <% end %>
+        <%= li2_insecure('country',[:address_country_id,:select,Country,
+                  :country],a,nil,"span","strong")%>
+        <%= li1_insecure('post_code','address_post_code','span','small',a)%>
     </ul>
   </div>
   <div class="col-xs-6">
@@ -47,7 +48,7 @@
             'passport_valid_till',
             'visa_type',
             'visa_valid_till'].each do |v| %>
-          <%= li1(v,v,'span','small',a)%>
+          <%= li1_insecure(v,v,'span','small',a)%>
         <% end %>
     </ul>
   </div>
@@ -63,7 +64,7 @@
             ['qua_grade','grade'],
             ['qua_exam','exam'],
             ['qua_score','score']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',a)%>
+          <%= li1_insecure(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
   </div>
@@ -71,9 +72,11 @@
     <ul class="vlsdet">
         <h4 class="bold-subhead">English Language Proficiency</h4>
         <% a.exams.each do |x| %>
-        <% [['english_level_name','english_level'],
-            ['exam_type_name','exam_type'],
-            ['exam_score','score'],
+        <%= li2('english_level',[:english_level_name,:select,EnglishLevel,
+                  :english_level],a,nil,"span","strong")%>
+        <%= li2('exam_type',[:exam_type_name,:select,ExamType,
+                  :qualification],a,nil,"span","strong")%>
+        <% [['exam_score','score'],
             ['exam_date','date']].each do |v| %>
           <%= li1(v[1],v[0],'span','small',x)%>
         <% end %>
@@ -90,7 +93,7 @@
             ['emer_relationship','Relationship'],
             ['emer_mobile','Mobile'],
             ['emer_email','Email']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',a)%>
+          <%= li1_insecure(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
   </div>
@@ -101,7 +104,7 @@
             ['flight_arrival_date','arrival_date'],
             ['flight_arrival_time','arrival_time'],
             ['flight_airport','airport']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',a)%>
+          <%= li1_insecure(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
   </div>
@@ -110,6 +113,3 @@
 <script>
   $('.best_in_place').best_in_place();
 </script>
-
-
-
