--- a/app/views/students/_basic.html.erb
+++ b/app/views/students/_basic.html.erb
@@ -10,9 +10,10 @@
   <div class="col-xs-4 row-top">
     <ul class="vlsdet pt-0">
         <h4 class="row-top bold-subhead">Personal</h4>
-        <% %w(ref_no first_name surname date_of_birth gender).each do |v| %>
+        <% %w(ref_no first_name surname gender).each do |v| %>
         <%= li1_insecure(v,v,'span','small',a)%>
         <% end %>
+        <%= li2_insecure('date_of_birth',{type: :date,column: :date_of_birth},a,nil,"span","strong")%>
         <%= li2_insecure('nationality',[:country_id,:select,Country,
                   :nationality],a,nil,"span","strong")%>
     </ul>
@@ -43,13 +44,11 @@
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Passport & Visa</h4>
-        <% ['passport_number',
-            'passport_valid_till',
-            'visa_type',
-            'visa_valid_till'].each do |v| %>
-          <%= li1_insecure(v,v,'span','small',a)%>
-        <% end %>
+      <h4 class="bold-subhead">Passport & Visa</h4>
+      <%= li1_insecure('passport_number','passport_number','span','small',a)%>
+      <%= li2_insecure('passport_valid_till',{type: :date,column: :passport_valid_till},a,nil,"span","strong")%>
+      <%= li1_insecure('visa_type','visa_type','span','small',a)%>
+      <%= li2_insecure('visa_valid_till',{type: :date,column: :visa_valid_till},a,nil,"span","strong")%>
     </ul>
   </div>
 </div>
@@ -58,8 +57,9 @@
   <div class="col-xs-6">
     <ul class="vlsdet">
         <h4 class="bold-subhead">Educational Background</h4>
-        <% [['qualification_name','qualification'],
-            ['qua_subject','subject'],
+        <%= li2_insecure('qualification',[:qualification_name,:select,Qualification,
+                  :qualification],a,nil,"span","strong")%>
+        <% [['qua_subject','subject'],
             ['qua_institution','institution'],
             ['qua_grade','grade'],
             ['qua_exam','exam'],
@@ -72,14 +72,12 @@
     <ul class="vlsdet">
         <h4 class="bold-subhead">English Language Proficiency</h4>
         <% a.exams.each do |x| %>
-        <%= li2('english_level',[:english_level_name,:select,EnglishLevel,
+        <%= li2_insecure('english_level',[:english_level_name,:select,EnglishLevel,
                   :english_level],a,nil,"span","strong")%>
-        <%= li2('exam_type',[:exam_type_name,:select,ExamType,
-                  :qualification],a,nil,"span","strong")%>
-        <% [['exam_score','score'],
-            ['exam_date','date']].each do |v| %>
-          <%= li1(v[1],v[0],'span','small',x)%>
-        <% end %>
+        <%= li2_insecure('exam_type',[:exam_type_name,:select,ExamType,
+                  :exam_type],a,nil,"span","strong")%>
+        <%= li1_insecure('score','exam_score','span','small',x)%>
+        <%= li2_insecure('exam_date',{type: :date,column: :exam_date},x,nil,"span","strong")%>
         <% end %>
     </ul>
   </div>
@@ -99,11 +97,11 @@
   </div>
   <div class="col-xs-6">
     <ul class="vlsdet">
-        <h4 class="bold-subhead">Flight Details</h4>
-        <% [['flight_no','flight_no'],
-            ['flight_arrival_date','arrival_date'],
-            ['flight_arrival_time','arrival_time'],
-            ['flight_airport','airport']].each do |v| %>
+      <h4 class="bold-subhead">Flight Details</h4>
+      <%= li1_insecure('flight_no','flight_no','span','small',a)%>
+      <%= li2_insecure('arrival_date',{type: :date,column: :flight_arrival_date},a,nil,"span","strong")%>
+      <% [['flight_arrival_time','arrival_time'],
+          ['flight_airport','airport']].each do |v| %>
           <%= li1_insecure(v[1],v[0],'span','small',a)%>
         <% end %>
     </ul>
