--- a/app/views/students/_basic.html.erb
+++ b/app/views/students/_basic.html.erb
@@ -57,7 +57,7 @@
   <div class="col-xs-6">
     <ul class="vlsdet">
         <h4 class="bold-subhead">Educational Background</h4>
-        <%= li2_insecure('qualification',[:qualification_name,:select,Qualification,
+        <%= li2_insecure('qualification',[:qualification_id,:select,Qualification,
                   :qualification],a,nil,"span","strong")%>
         <% [['qua_subject','subject'],
             ['qua_institution','institution'],
