--- a/app/views/shared/_note.html.erb
+++ b/app/views/shared/_note.html.erb
@@ -17,13 +17,14 @@
   </div>
 </div>
 
-
-
-
-
 <script>
+<% if current_user.is_a?(User) %>
+  <% tab = "note" %>
+<% else %>
+  <% tab = "comment" %>
+<% end %>
 
-acttab('note');
+acttab(tab);
 actdd();
 </script>
 
