--- a/app/views/registrations/mailer/confirmation_instructions.html.erb
+++ b/app/views/registrations/mailer/confirmation_instructions.html.erb
@@ -1,7 +1,10 @@
-<p>Welcome <%= @resource.first_name %>!</p>
+<div class="row well">
+<h2>Welcome <%= @resource.first_name %></h2>
+<div class="row">
+  <img src="/images/carousel/screenshot.jpg">
+</div>
 
-
-<p>User Id  - <%= @resource.email %></p> 
-
-<p>You can confirm your account email through the link below : </p>
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token) %></p>
+<div class="row">
+  <%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @token),{class: "btn btn-primary"} %>
+</div>
+</div>
