--- a/app/views/registrations/_form_educational_background.html.erb
+++ b/app/views/registrations/_form_educational_background.html.erb
@@ -1,19 +1,59 @@
 <!-- educational information  - STARTS -->
-<h5>Qualification</h5>
-<div class="row">
- <%= bs(f,[:qualification_id,Qualification.order(:name),
+<% if false %>
+  <!-- not using now, will be deprecated in the next release -->
+  <h5>Qualification</h5>
+  <div class="row">
+    <%= bs(f,[:qualification_id,Qualification.order(:name),
               :id,
               :name,
               {prompt: "-qualification-"},{}],
-              "collection_select",
-              ['Qualification',4],7,6) %> 
- <% %w(subject institution grade exam score).each do |el| %>
-   <%= bs(f,'qua_' + el,"text_field",[el,4],7,6) %>
- <% end %>
-</div>
+    "collection_select",
+    ['Qualification',4],7,6) %> 
+  <% %w(subject institution grade exam score).each do |el| %>
+    <%= bs(f,'qua_' + el,"text_field",[el,4],7,6) %>
+  <% end %>
+  </div>
+<% end %>
 
-  <h5>English Language Proficiency</h5>
-  <%= f.fields_for :proficiency_exams do |prof| %>
+
+
+<h5 class="bold-subhead">Qualification</h5>
+<%= f.fields_for :qualifications do |q| %>
+  <div class="row blue-well">
+    <div class="row row-top">
+      <div class="col-xs-12 text-right padR30">
+        <%= q.link_to_remove('<span class="glyphicon mar0 glyphicon-remove"></span>'.html_safe) %>
+      </div>
+    </div>
+    <div class="row">
+      <%= bs(q,[:qualification_name_id,QualificationName.order(:name),
+                :id,
+                :name,
+                {prompt: "-qualification name-"},{}],
+      "collection_select",
+      [nil,4],7,11) %>
+  </div>
+
+  <div class="row">
+    <% %w(subject institution score graduated_out grade exam).each do |el| %>
+      <%= bs(q,el,"text_field",[nil,4],7,6) %>
+    <% end %> 
+
+  </div>
+  </div>
+  <div class="clear"></div>
+  <br/>
+<% end %> 
+
+<div class="row">
+  <div class="col-xs-12 form-group">
+    <%= f.link_to_add "Add Exam", :qualifications,{class: 'btn btn-default'} %>
+  </div>
+</div>
+<hr>
+
+<h5 class="bold-subhead">English Language Proficiency</h5>
+<%= f.fields_for :proficiency_exams do |prof| %>
   <div class="row blue-well">
     <div class="row row-top">
       <div class="col-xs-12 text-right padR30">
@@ -21,30 +61,32 @@
       </div>
     </div>
 
-      <%= bs(prof,[:eng_level_id,EnglishLevel.order(:name),
-                                                  :id,
-                                                  :name,
-                                                  {prompt: "-student source-"},{}],
-                                                  "collection_select",
-                                                  [nil,4],7,6) %>
-      <%= bs(prof,[:exam_type_id,ExamType.order(:name),
-                                                  :id,
-                                                  :name,
-                                                  {prompt: "-student source-"},{}],
-                                                  "collection_select",
-                                                  [nil,4],7,6) %>
-      <% %w(exam_date exam_score).each do |el| %>
-        <%= bs(prof,el,"text_field",[nil,4],7,6) %>
-      <% end %> 
+    <%= bs(prof,[:eng_level_id,EnglishLevel.order(:name),
+                 :id,
+                 :name,
+                 {prompt: "-english level-"},{}],
+    "collection_select",
+    [nil,4],7,6) %>
+  <%= bs(prof,[:exam_type_id,ExamType.order(:name),
+               :id,
+               :name,
+               {prompt: "-exam type-"},{}],
+  "collection_select",
+  [nil,4],7,6) %>
+
+    <%= bs(prof,["exam_date",{class: "datepicker"}],"text_field",[nil,4],7,6) %>
+<% %w(exam_score).each do |el| %>
+  <%= bs(prof,el,"text_field",[nil,4],7,6) %>
+<% end %> 
   </div>
   <div class="clear"></div>
   <br/>
-  <% end %> 
+<% end %> 
 
 <div class="row">
-<div class="col-xs-12 form-group">
-  <%= f.link_to_add "Add Exam", :proficiency_exams,{class: 'btn btn-default'} %>
-</div>
+  <div class="col-xs-12 form-group">
+    <%= f.link_to_add "Add Exam", :proficiency_exams,{class: 'btn btn-default'} %>
+  </div>
 </div>
 
 
