--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -23,7 +23,7 @@
       <ul role="menu" class="dropdown-menu">
         <% [:application_status,
             :course_level,:course_subject,:doc_category,:required_doc,:required_doc_type,
-            :english_level,:exam_type,:qualification,:progression_status].sort.each do |r| %>
+            :english_level,:exam_type,:qualification_name,:progression_status].sort.each do |r| %>
               <% if can? :read, r.to_s.camelize.constantize %>
               <li>
                  <%= link_to r.to_s.titleize.pluralize,"/" + r.to_s.pluralize %>
