--- a/app/views/students/_basic.html.erb
+++ b/app/views/students/_basic.html.erb
@@ -26,6 +26,16 @@
     </ul>
   </div>
 
+    <div class="yellow-well well-sm form-last">
+      <h4 class="bold-subhead">Educational</h4>
+      <ul class="vlsdet-s pt-0">
+        <h5><%= link_to "Qualification",qualification_path,{remote: true} %></h5>
+        <h5><%= link_to "Proficiency Exams",exam_path,{remote: true} %></h5>
+      </ul>
+    </div>
+    <br/>
+
+
 </div>
 <div class="row row-top border-b">
   <div class="col-xs-6">
@@ -48,36 +58,6 @@
       <%= li2_insecure('passport_valid_till',{type: :date,column: :passport_valid_till},a,nil,"span","strong")%>
       <%= li1_insecure('visa_type','visa_type','span','small',a)%>
       <%= li2_insecure('visa_valid_till',{type: :date,column: :visa_valid_till},a,nil,"span","strong")%>
-    </ul>
-  </div>
-</div>
-
-<div class="row row-top border-b">
-  <div class="col-xs-6">
-    <ul class="vlsdet">
-        <h4 class="bold-subhead">Educational Background</h4>
-        <%= li2_insecure('qualification',[:qualification_id,:select,Qualification,
-                  :qualification],a,nil,"span","strong")%>
-        <% [['qua_subject','subject'],
-            ['qua_institution','institution'],
-            ['qua_grade','grade'],
-            ['qua_exam','exam'],
-            ['qua_score','score']].each do |v| %>
-          <%= li1_insecure(v[1],v[0],'span','small',a)%>
-        <% end %>
-    </ul>
-  </div>
-  <div class="col-xs-6">
-    <ul class="vlsdet">
-        <h4 class="bold-subhead">English Language Proficiency</h4>
-        <% a.exams.each do |x| %>
-        <%= li2_insecure('english_level',[:english_level_name,:select,EnglishLevel,
-                  :english_level],a,nil,"span","strong")%>
-        <%= li2_insecure('exam_type',[:exam_type_name,:select,ExamType,
-                  :exam_type],a,nil,"span","strong")%>
-        <%= li1_insecure('score','exam_score','span','small',x)%>
-        <%= li2_insecure('exam_date',{type: :date,column: :exam_date},x,nil,"span","strong")%>
-        <% end %>
     </ul>
   </div>
 </div>
