--- a/app/views/enquiries/_basic.html.erb
+++ b/app/views/enquiries/_basic.html.erb
@@ -42,6 +42,10 @@
     </ul>
   </div>
   <div class="col-xs-4">
+        <h5 class="text-center green-sided">Branch : <b><%= a.branch.try(:name) %></b></h5>
+    <h5 class="text-center red-sided">Owner : <b><%= a.ato %></b></h5>
+
+
     <div class="well well-sm form-last">
         <h4 class="bold-subhead">History</h4>
         <ul class="vlsdet-s pt-0">
