--- a/app/views/registrations/_form_educational_background.html.erb
+++ b/app/views/registrations/_form_educational_background.html.erb
@@ -47,7 +47,7 @@
 
 <div class="row">
   <div class="col-xs-12 form-group">
-    <%= f.link_to_add "Add Exam", :qualifications,{class: 'btn btn-default'} %>
+    <%= f.link_to_add "Add Qualification", :qualifications,{class: 'btn btn-default'} %>
   </div>
 </div>
 <hr>
