--- a/app/views/students/_basic.html.erb
+++ b/app/views/students/_basic.html.erb
@@ -1,7 +1,7 @@
 <!-- basic information about the registration -->
 <% a = @registration %>
 <div class="students">
-<div class="row border-b">  
+<div class="row border-b">
   <div class="col-xs-3">
     <%= render 'images/disp', core: "registration", a: a %>
 
@@ -29,8 +29,8 @@
     <div class="yellow-well well-sm form-last">
       <h4 class="bold-subhead">Educational</h4>
       <ul class="vlsdet-s pt-0">
-        <h5><%= link_to "Qualification",qualification_path,{remote: true} %></h5>
-        <h5><%= link_to "Proficiency Exams",exam_path,{remote: true} %></h5>
+        <h5><%= link_to "Qualification",qualification_path(@registration.id),{remote: true} %></h5>
+        <h5><%= link_to "Proficiency Exams",exam_path(@registration.id),{remote: true} %></h5>
       </ul>
     </div>
     <br/>
